--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,10 @@
       </div>
     </header>
     <div class="container">
-      <form>
+      <form class="search-vacancy">
         <label for="search_vacancy">Поиск вакансий</label>
-        <input type="text" id="search_vacancy" style="display: block" />
+        <input type="text" id="search-vacancy-input" />
+        <input type="submit" value="vacancy-text" id="vacancy-search-submit" />
       </form>
     </div>
     <main>
